asciidoc generation from components --
asciidoc build selectable through configure --enable-build-documentation=asciidoc
By default, without the switch, generates man pages only

Change instcomp to provide both man page and asciidoc
Alter submakefile for same

Amend comp to produce both man pages and asciidoc pages
Change src/hal/components/Submakefile to produce asciidocs
for all man page types

New option headers of 'special_format_man' and 'special_format_doc'
in comp and instcomp

These are to be used for any options such as tables which do not
transpose from one format to the other.

The contents of the field is rendered after the DESCRIPTION section
see lut5.icomp for an example

Create man/doc/man(1,3,9)

Edit all .comp and .icomp files to remove in-line groff formatting

Fix 'make clean' for generated asciidocs.

Insert source origin into man and asciidocs.

Deleted redundent man pages for debounce and at_pid

Remove man/man9/pid.9 and update man/man1/axis-remote.1

    Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ ifeq ("$(origin VV)", "command line")
 endif
 # Delete the default suffix rules
 .SUFFIXES:
-.PHONY: default userspace modules clean modclean depclean install python pythonclean cscope cscopeclean
+.PHONY: default userspace modules clean modclean depclean docclean install python pythonclean cscope cscopeclean
 
 # A "trivial build" is one which should not include dependency information
 # either because it should be usable before dependency information can be
@@ -176,6 +176,7 @@ INSTALL_DIRS :=
 # Submakefiles from each of these directories will be included if they exist
 SUBDIRS := \
 	\
+	../man \
 	machinetalk \
 	machinetalk/support \
 	machinetalk/messagebus \
@@ -277,6 +278,7 @@ TODEPS = $(patsubst %.cc,depends/%$(2).d,$(patsubst %.c,depends/%$(2).d,$(1)))
 TOOBJSDEPS = $(call TOOBJS,$(1),$(2)) $(call TODEPS, $(1),$(2))
 
 SUBMAKEFILES := $(patsubst %,%/Submakefile,$(SUBDIRS))
+#$(info SUBMAKEFILES=$(SUBMAKEFILES))
 -include $(wildcard $(SUBMAKEFILES))
 
 # This checks that all the things listed in USERSRCS are either C files
@@ -700,8 +702,12 @@ modclean:
 
 depclean:
 	-rm -rf depends
-
-clean: depclean modclean
+	
+docclean:
+	-rm -f ../man/man9/*.9icomp
+	-rm -f ../man/doc/man9/*.asciidoc
+	
+clean: depclean modclean docclean
 	find . -name '*.o' |xargs rm -f
 	-rm -rf objects
 	-rm -f $(TARGETS)
