--- a/scripts/rip-environment.in
+++ b/scripts/rip-environment.in
@@ -41,6 +41,8 @@ case "$PATH" in
 	return ;;
 esac
 
+RIP=@RUN_IN_PLACE@; export RIP
+
 EMC2_HOME=@EMC2_HOME@; export EMC2_HOME
 EMC2VERSION="@EMC2VERSION@"; export EMC2VERSION
 LINUXCNC_EMCSH=@WISH@; export LINUXCNC_EMCSH
@@ -63,16 +65,6 @@ if [ -z "$PYTHONPATH" ]; then
     PYTHONPATH=$EMC2_HOME/lib/python
 else
     PYTHONPATH=$EMC2_HOME/lib/python:"$PYTHONPATH"
-fi
-
-if [ -z "$MANPATH" ]; then
-    if type -path manpath > /dev/null 2>&1; then
-	MANPATH=$EMC2_HOME/man/legacy:"$(manpath)"
-    else
-	MANPATH=$EMC2_HOME/man/legacy:/usr/local/man:/usr/local/share/man:/usr/share/man
-    fi
-else
-    MANPATH=$EMC2_HOME/man/legacy:"$MANPATH"
 fi
 
 if [ -z "$GLADE_CATALOG_PATH" ]; then
@@ -112,4 +104,4 @@ if [ -f $EMC2_HOME/src/Makefile ]; then
     build () { make -C $EMC2_HOME/src "$@"; }
 fi
 
-export PYTHONPATH MANPATH LD_LIBRARY_PATH TCLLIBPATH GLADE_CATALOG_PATH
+export PYTHONPATH LD_LIBRARY_PATH TCLLIBPATH GLADE_CATALOG_PATH
