delete hm2_soc: adapt build support

--- a/src/Makefile.inc.in
+++ b/src/Makefile.inc.in
@@ -397,7 +397,7 @@ CONFIG_HAL_EVOREG=m
 CONFIG_HAL_MOTENC=m
 CONFIG_HAL_SKELETON=m
 CONFIG_HAL_GPIO=m
-CONFIG_HM2_SOC=m
+CONFIG_HM2_SOC_OL=m
 CONFIG_HAL_SPI=m
 CONFIG_HAL_SPEAKER=m
 CONFIG_HAL_STG=m
