hm2_soc_ol/instantiable: adapt 5i25-socfpga config

--- a/configs/hm2-soc-stepper/5i25-socfpga.ini
+++ b/configs/hm2-soc-stepper/5i25-socfpga.ini
@@ -8,10 +8,19 @@
 [HOSTMOT2]
 DRIVER=hm2_soc_ol
 BOARD=de0n
+
+# device name as exported in the device tree overlay
+# see /lib/firmware/socfpga/dtbo/template.dts:
+#                        hm2reg_io_0: hm2-socfpg0@0x40000 {
+#                                     ^^^^^^^^^^^
+DEVNAME=hm2-socfpg0
+
 #CONFIG="firmware=zynq_5i25_overlay.dtbo num_encoders=0 num_pwmgens=0 num_stepgens=3"
 #CONFIG="firmware=socfpga/dtbo/hm2reg_uio-irq.dtbo num_encoders=0 num_pwmgens=0 num_stepgens=3"
 
-CONFIG="firmware=socfpga/dtbo/DE0_Nano_SoC_DB25.7I76_7I76_7I76_7I76.dtbo num_encoders=1 num_stepgens=4"
+#CONFIG="firmware=socfpga/dtbo/DE0_Nano_SoC_DB25.7I76_7I76_7I76_7I76.dtbo num_encoders=1 num_stepgens=4"
+
+CONFIG="firmware=socfpga/dtbo/DE0_Nano_SoC_DB25.7I76_7I85S_GPIO_GPIO.dtbo num_stepgens=4 num_encoders=1 num_mencoders=4"
 
 
 [EMC]
