hm2_soc_ol/instantiable: adapt 5i25-soc-cramps.ini
untested.

--- a/configs/hm2-soc-stepper/5i25-soc-cramps.ini
+++ b/configs/hm2-soc-stepper/5i25-soc-cramps.ini
@@ -9,6 +9,7 @@
 DRIVER=hm2_soc_ol
 BOARD=5i25
 CONFIG="firmware=socfpga/dtbo/hm2reg_uio.dtbo num_encoders=2 num_pwmgens=2 num_stepgens=10"
+DEVNAME=hm2-socfpg0
 
 
 
