--- a/debian/rules.in
+++ b/debian/rules.in
@@ -182,16 +182,13 @@ endif
 	cp src/rtapi/shmdrv/limits.d-machinekit.conf \
 	    debian/tmp/etc/security/limits.d/machinekit.conf
 
-	cp debian/machinekit-posix.install.in debian/machinekit-posix.install
-	cp debian/machinekit-rt-preempt.install.in debian/machinekit-rt-preempt.install
-	cp debian/machinekit-xenomai.install.in debian/machinekit-xenomai.install
-
 	if (grep ^USERMODE_PCI=yes src/Makefile.inc -q); then \
-	    echo "usr/include/linuxcnc/userpci/*.h" >> debian/machinekit-posix.install; \
-	    echo "usr/include/linuxcnc/userpci/*.h" >> debian/machinekit-rt-preempt.install; \
-	    echo "usr/include/linuxcnc/userpci/*.h" >> debian/machinekit-xenomai.install; \
+	    cp debian/machinekit-dev.install.in debian/machinekit-dev.install; \
+	else \
+	    grep -v userpci debian/machinekit-dev.install.in \
+		> debian/machinekit-dev.install; \
 	fi
-	
+
 	dh_install --sourcedir=debian/tmp --fail-missing -Xusr/bin/pasm
 
 # Build architecture-independent files here.
@@ -216,9 +213,9 @@ binary-arch: build install
 	dh_installdeb
 
 #	# delete files that should be in machinekit-dev package
-#	rm -f debian/machinekit/usr/bin/comp
-#	rm -f debian/machinekit/usr/share/linuxcnc/Makefile.modinc
-#	rm -f debian/machinekit/usr/share/linuxcnc/Makefile.inc
+	rm -f debian/machinekit/usr/bin/comp
+	rm -f debian/machinekit/usr/share/linuxcnc/Makefile.modinc
+	rm -f debian/machinekit/usr/share/linuxcnc/Makefile.inc
 
 	cat debian/machinekit/DEBIAN/shlibs debian/shlibs.pre > \
 	    debian/shlibs.local
