--- a/configs/ARM/BeagleBone/CRAMPS/CRAMPS.kosselpro.ini
+++ b/configs/ARM/BeagleBone/CRAMPS/CRAMPS.kosselpro.ini
@@ -37,7 +37,7 @@ DISPLAY = axis
 CYCLE_TIME =            0.200
 
 # Path to help file
-HELP_FILE =             tklinucnc.txt
+HELP_FILE =             CRAMPS.kosselpro.txt
 
 # Initial display setting for position, RELATIVE or MACHINE
 POSITION_OFFSET =       RELATIVE
@@ -49,7 +49,7 @@ POSITION_FEEDBACK =     ACTUAL
 MAX_FEED_OVERRIDE =     5.0
 
 # Prefix to be used
-PROGRAM_PREFIX = ./subroutines
+PROGRAM_PREFIX = /usr/share/linuxcnc/ncfiles
 
 # Introductory graphic
 INTRO_GRAPHIC =         linuxcnc.gif
@@ -63,10 +63,12 @@ PYVCP = 3D.Temps.panel.xml
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
 PROGRAM_EXTENSION = .py Python Script
+PROGRAM_EXTENSION = .gcode RepRap Flavour GCode
 png = image-to-gcode
 gif = image-to-gcode
 jpg = image-to-gcode
 py = python
+gcode = gcode-to-ngc
 
 
 [TASK]
@@ -82,7 +84,8 @@ CYCLE_TIME =            0.010
 # File containing interpreter variables
 PARAMETER_FILE =        pru-stepper.var
 
-SUBROUTINE_PATH = ./subroutines
+# Needed for M104, etc
+SUBROUTINE_PATH = /usr/share/linuxcnc/ncfiles/remap-subroutines/fdm
 
 # Add Delta-specific G7x codes to go to calibration positions
 # See http://www.linuxcnc.org/docs/devel/html/remap/structure.html#_a_definition_remapping_codes
@@ -91,6 +94,41 @@ SUBROUTINE_PATH = ./subroutines
 #REMAP=G71 ngc=g71 modalgroup=1
 #REMAP=G72 ngc=g72 modalgroup=1
 #REMAP=G79 ngc=g79 modalgroup=1
+
+# Add FDM-Standard Gx and Mx codes
+#REMAP=G22 modalgroup=1 ngc=g22
+#REMAP=G23 modalgroup=1 ngc=g23
+#REMAP=G28 modalgroup=1 argspec=xyza ngc=g28
+#REMAP=G29 modalgroup=1 ngc=g29
+#REMAP=G29.1 modalgroup=1 argspec=xyz ngc=g29_1
+#REMAP=G29.2 modalgroup=1 argspec=xyz ngc=g29_2
+#REMAP=G30 modalgroup=1 argspec=pxy ngc=g30
+REMAP=M104 modalgroup=10 argspec=iPt ngc=m104
+REMAP=M106 modalgroup=10 argspec=iPt ngc=m106
+REMAP=M107 modalgroup=10 argspec=it ngc=m107
+#REMAP=M109 modalgroup=10 argspec=tP ngc=m109
+#REMAP=M140 modalgroup=10 argspec=iP ngc=m140
+#REMAP=M141 modalgroup=10 argspec=iP ngc=m141
+#REMAP=M190 modalgroup=10 argspec=P ngc=m190
+#REMAP=M191 modalgroup=10 argspec=P ngc=m191
+#REMAP=M200 modalgroup=10 argspec=D ngc=m200
+#REMAP=M207 modalgroup=10 argspec=PQ ngc=m207
+REMAP=M221 modalgroup=10 argspec=P ngc=m221
+#REMAP=M226 modalgroup=10 ngc=m226
+#REMAP=M280 modalgroup=10 argspec=itP ngc=m280
+#REMAP=M300 modalgroup=10 argspec=iqP ngc=m300
+#REMAP=M400 modalgroup=10 ngc=m400
+#REMAP=M420 modalgroup=10 argspec=itredp ngc=m420
+#REMAP=M700 modalgroup=10 argspec=iP ngc=m700
+#REMAP=M701 modalgroup=10 argspec=iP ngc=m701
+#REMAP=M702 modalgroup=10 argspec=iP ngc=m702
+#REMAP=M710 modalgroup=10 argspec=epq ngc=m710
+
+# Enable ini parameter passing
+FEATURES = 4
+
+# This is the line in the .hal
+#[EMCMOT]EMCMOT servo_period_nsec=[EMCMOT]SERVO_PERIOD num_joints=[TRAJ]AXES tp=tp kins=lineardeltakins
 
 [EMCMOT]
 
@@ -136,19 +174,18 @@ MAX_LINEAR_VELOCITY = 500.00
 
 
 # KosselPro
-#  20-tooth pulley
+#  20-tooth
 #  200 steps/rev motors
 #  32x microstepping
-# 2mm/tooth * 20 tooth/rev = 40mm/rev
-# (32*200 steps/rev) * (1 rev/40mm) = 160 steps/mm
+# 2mm/tooth * 20 tooth/rev = 40mm/rev (0.025 rev/mm)
+# (32*200 steps/rev) * (1 rev/40mm) = 160 steps/mm 
+#  
 
 #
-# Positive 'scale' causes counter-clockwise motion when looking at the shaft,
-# when the plug is connected with the exposed pin bits facing outwards
-# (with red wire nearer to the switches side of the board).
+# Positive 'scale' causes clockwise motion when looking at the shaft.
 #
 # To have the carriage home with up motion, we set 'scale' negative.
-# Then, a positive axis motion moves the carriage up.
+# Then, a negative axis motion moves the carriage up.
 #
 # Example max step rates:
 # 100 mm/s * 160 steps/mm = 16K steps/sec
@@ -157,29 +194,24 @@ MAX_LINEAR_VELOCITY = 500.00
 
 [AXIS_0]
 
-# 
-# Step timing is 40 us steplen + 40 us stepspace
-# That gives 80 us step period = 12.5 KHz step freq
 #
-# Bah, even software stepping can handle that, hm2 doesnt buy you much with
-# such slow steppers.
-#
-# Scale is 200 steps/rev * 5 revs/inch = 1000 steps/inch
-#
-# This gives a maxvel of 12.5/1 = 12.5 ips
+# Step timing of 1.9 us steplen + 1.9 us stepspace gives
+# 3.8 us step period = 263 kHz step freq.
+# With a SCALE of 160 steps/mm, max velocity is:
+# 263 ksteps/s / 160 steps/mm = 1645 mm/s (64.8 inch/s)
 #
 
 TYPE =              LINEAR
-MAX_VELOCITY =       350.0
-MAX_ACCELERATION =   3000.0
+MAX_VELOCITY =       200.0
+MAX_ACCELERATION =   9000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    480.0
+STEPGEN_MAX_VEL =    240.0
 STEPGEN_MAX_ACC =    9000.0
 
 BACKLASH =           0.000
 
-# scale is 200 steps/rev * 5 revs/inch
-SCALE =  160
+# Scale is 32*200 steps/rev * 0.025 revs/mm
+SCALE = -160
 
 MIN_LIMIT =             -10.0
 MAX_LIMIT =             300.0
@@ -198,10 +230,10 @@ HOME_SEQUENCE = 0
 # Set to zero if you don't have physical home/limit switches
 # Set to the desired homing and latch velocity if you have switches
 # See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =       -25.0
-HOME_LATCH_VEL =        10.0
+HOME_SEARCH_VEL =       25.0
+HOME_LATCH_VEL =        -10.0
 
-# these are in nanoseconds for DRV8825
+# These are in nanoseconds for DRV8825
 DIRSETUP   =              650
 DIRHOLD    =              650
 STEPLEN    =              1900
@@ -210,16 +242,16 @@ STEPSPACE  =              1900
 [AXIS_1]
 
 TYPE =              LINEAR
-MAX_VELOCITY =       350.0
-MAX_ACCELERATION =   3000.0
+MAX_VELOCITY =       200.0
+MAX_ACCELERATION =   9000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    480.0
+STEPGEN_MAX_VEL =    240.0
 STEPGEN_MAX_ACC =    9000.0
 
 BACKLASH =           0.000
 
-# scale is 200 steps/rev * 5 revs/inch
-SCALE =  160
+# Scale is 32*200 steps/rev * 0.025 revs/mm
+SCALE = -160
 
 MIN_LIMIT =             -10.0
 MAX_LIMIT =             300.0
@@ -238,10 +270,10 @@ HOME_SEQUENCE = 0
 # Set to zero if you don't have physical home/limit switches
 # Set to the desired homing and latch velocity if you have switches
 # See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =       -25.0
-HOME_LATCH_VEL =        10.0
+HOME_SEARCH_VEL =       25.0
+HOME_LATCH_VEL =        -10.0
 
-# these are in nanoseconds for DRV8825
+# These are in nanoseconds for DRV8825
 DIRSETUP   =              650
 DIRHOLD    =              650
 STEPLEN    =              1900
@@ -250,16 +282,16 @@ STEPSPACE  =              1900
 [AXIS_2]
 
 TYPE =              LINEAR
-MAX_VELOCITY =       350.0
-MAX_ACCELERATION =   3000.0
+MAX_VELOCITY =       200.0
+MAX_ACCELERATION =   9000.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    480.0
+STEPGEN_MAX_VEL =    240.0
 STEPGEN_MAX_ACC =    9000.0
 
 BACKLASH =           0.000
 
-# scale is 200 steps/rev * 5 revs/inch
-SCALE =  160
+# Scale is 32*200 steps/rev * 0.025 revs/mm
+SCALE = -160
 
 MIN_LIMIT =             -10.0
 MAX_LIMIT =             300.0
@@ -278,10 +310,10 @@ HOME_SEQUENCE = 0
 # Set to zero if you don't have physical home/limit switches
 # Set to the desired homing and latch velocity if you have switches
 # See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =       -25.0
-HOME_LATCH_VEL =        10.0
+HOME_SEARCH_VEL =       25.0
+HOME_LATCH_VEL =        -10.0
 
-# these are in nanoseconds for DRV8825
+# These are in nanoseconds for DRV8825
 DIRSETUP   =              650
 DIRHOLD    =              650
 STEPLEN    =              1900
