--- a/debian/rules.in
+++ b/debian/rules.in
@@ -152,7 +152,11 @@ install: build
 	mkdir -p debian/tmp
 	(cd debian/extras && cp -a * ../tmp)
 	(cd src; export DESTDIR=`pwd`/../debian/tmp; $(MAKE) V=$(DH_VERBOSE) $@)
-	mkdir -p debian/tmp/usr/lib debian/tmp/usr/include/linuxcnc
+	mkdir -p debian/tmp/usr/lib/linuxcnc/modules debian/tmp/usr/include/linuxcnc
+	## temp symlinks until all paths resolved
+#	ln -sf debian/tmp/usr/lib/linuxcnc/modules debian/tmp/usr/lib/linuxcnc/posix
+#	ln -sf debian/tmp/usr/lib/linuxcnc/modules debian/tmp/usr/lib/linuxcnc/rt-preempt
+#	ln -sf debian/tmp/usr/lib/linuxcnc/modules debian/tmp/usr/lib/linuxcnc/xenomai
 	cp lib/*.a debian/tmp/usr/lib
 	## if they weren't there we don't care if rm fails
 	rm -f debian/tmp/usr/share/applications/linuxcnc-usermanual*.desktop
