Add instantiated watch component. (HAL)
watch component written to help remove need for user to repeatedly poll
pin value via `halcmd show pin <name>` and parse the output.
A 'built in' example of this halcmd use is the M109 user M code.

Since the changes made to memory allocation and freeing after introduction of
instantiated components, this creates a 'corner case' where the HAL heap
is eventually exhausted, because the housekeeping tracks and voids the memory
used for instances of a component, but does not free them until the main
hal_lib exits.  machinekit/machinekit-hal/issues/142 relates

As a side issue, a new hal sub-dir `/user_icomps` in which watch is built,
shows how to build C source code instantiated components within the source tree.

Also adds minor component s(mall)counter, used as a pin value change generator
for demo sim in seperate commit.

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/src/Makefile
+++ b/src/Makefile
@@ -238,6 +238,7 @@ SUBDIRS := \
 	hal/user_comps/devices \
 	hal/user_comps/mb2hal \
 	hal/user_comps \
+	hal/user_icomps \
 	hal/user_comps/vismach \
 	hal/user_comps/vfs11_vfd \
 	hal/user_comps/vfdb_vfd \
