More work on BeBoPr-Bridge, CRAMPS and Xylotex configs for stretch
Trying to figure out which PROGRAM_PREFIX is best to use.

--- a/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
@@ -55,8 +55,9 @@ MAX_SPINDLE_OVERRIDE =  1.0
 MIN_SPINDLE_OVERRIDE =  0.25
 
 # Prefix to be used
-#PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files
-PROGRAM_PREFIX = ~/machinekit/nc_files/
+PROGRAM_PREFIX = ../../../nc_files/
+#PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
+#PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
 INTRO_GRAPHIC =         linuxcnc.gif
