--- a/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ini
+++ b/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ini
@@ -47,6 +47,8 @@ MAX_FEED_OVERRIDE =     1.5
 
 # Prefix to be used
 PROGRAM_PREFIX = ../../../nc_files/
+#PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
+#PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
 INTRO_GRAPHIC =         machinekit.gif
