--- a/src/Makefile
+++ b/src/Makefile
@@ -140,10 +140,10 @@ ifeq ($(RUN_IN_PLACE)+$(BUILD_DRIVERS),yes+yes)
 			-ne 0 -o ! -u ../libexec/rtapi_app_$$f \) \
 		&& need_setuid=1; \
 	done; \
-	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_generic.bin ../rtlib/modules/pru_generic.bin; \
-	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_generic.dbg ../rtlib/modules/pru_generic.dbg; \
-	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_decamux.bin ../rtlib/modules/pru_decamux.bin; \
-	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_decamux.dbg ../rtlib/modules/pru_decamux.dbg; \
+	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_generic.bin ../rtlib/modules/pru_generic.bin 2>/dev/null | true; \
+	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_generic.dbg ../rtlib/modules/pru_generic.dbg 2>/dev/null | true; \
+	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_decamux.bin ../rtlib/modules/pru_decamux.bin 2>/dev/null | true; \
+	ln -sf $(EMC2_HOME)/rtlib/prubin/pru_decamux.dbg ../rtlib/modules/pru_decamux.dbg 2>/dev/null | true; \
 	test "$$need_setuid" = 1 && \
 	    $(VECHO) -n "You now need to run 'sudo make setuid' " && \
 	    $(VECHO) "in order to run in place." || true
