Removing references to linuxcnc
Changed PRUBIN for rt-preempt to match that of xenomai
Renamed machine to reflect Xylotex-DB25 cape.
Edited INTRO_GRAPHIC to use machinekit.gif rather than linuxcnc.gif

--- a/configs/ARM/BeagleBone/Xylotex/Xylotex.ShuttleXpress.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex.ShuttleXpress.ini
@@ -1,7 +1,8 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
 CONFIG=pru=1 num_stepgens=4
-PRUBIN=xenomai/pru_generic.bin
+#PRUBIN=xenomai/pru_generic.bin
+PRUBIN=rt-preempt/pru_generic.bin
 
 [EMC]
 
@@ -45,6 +46,8 @@ MAX_FEED_OVERRIDE =     1.5
 
 # Prefix to be used
 PROGRAM_PREFIX = ../../../nc_files/
+#PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
+#PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
 INTRO_GRAPHIC =         machinekit.gif
@@ -54,7 +57,7 @@ INTRO_TIME =            5
 INCREMENTS = 10 1 0.1 0.01
 
 
-#(JP)PYVCP = BeBoPr.panel.xml
+#PYVCP = BeBoPr.panel.xml
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
