--- a/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
@@ -2,7 +2,6 @@
 DRIVER=hal_pru_generic
 CONFIG=pru=1 num_stepgens=4
 #PRUBIN=xenomai/pru_generic.bin
-#PRUBIN=lib/linuxcnc/rt-preempt/pru_generic.bin
 PRUBIN=rt-preempt/pru_generic.bin
 
 ###############################################################################
@@ -11,7 +10,7 @@ PRUBIN=rt-preempt/pru_generic.bin
 [EMC]
 
 # Name of machine, for use with display, etc.
-MACHINE =               Xylotex
+MACHINE =               Xylotex-DB25
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
 DEBUG = 0
@@ -60,7 +59,7 @@ PROGRAM_PREFIX = ../../../nc_files/
 #PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
-INTRO_GRAPHIC =         linuxcnc.gif
+INTRO_GRAPHIC =         machinekit.gif
 INTRO_TIME =            5
 
 # Increments for the JOG section
