--- a/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ShuttleXpress.ini
+++ b/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ShuttleXpress.ini
@@ -1,7 +1,8 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
 CONFIG=pru=1 num_stepgens=4 num_pwmgens=6
-PRUBIN=xenomai/pru_generic.bin
+#PRUBIN=xenomai/pru_generic.bin
+PRUBIN=rt-preempt/pru_generic.bin
 
 
 [EMC]
@@ -43,7 +44,9 @@ POSITION_FEEDBACK =     ACTUAL
 MAX_FEED_OVERRIDE =     1.5
 
 # Prefix to be used
-PROGRAM_PREFIX = ../../../nc_files/
+PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
+#PROGRAM_PREFIX = ../../../nc_files/
+#PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
 INTRO_GRAPHIC =         machinekit.gif
