Changes made to get cape working
Added pru_period=25000 (for Superior SS2000MD4 drive)
Deleted some duplicated lines regarding DB25-1
Commented out lines about DB25-1 for CandCNC Mini-IO BOB
Fixed estop-in for CandCNC Mini-IO BOB
Changed velocity and travel to work with X2 minimill

--- a/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
@@ -1,6 +1,7 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
-CONFIG=pru=1 num_stepgens=4
+#CONFIG=pru=1 num_stepgens=4
+CONFIG=prucode=/usr/lib/linuxcnc/rt-preempt/pru_generic.bin pru=1 num_stepgens=4 num_pwmgens=1
 #PRUBIN=xenomai/pru_generic.bin
 PRUBIN=rt-preempt/pru_generic.bin
 
@@ -54,9 +55,9 @@ MAX_SPINDLE_OVERRIDE =  1.0
 MIN_SPINDLE_OVERRIDE =  0.25
 
 # Prefix to be used
-PROGRAM_PREFIX = ../../../nc_files/
+#PROGRAM_PREFIX = ../../../nc_files/
 #PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
-#PROGRAM_PREFIX = ~/machinekit/nc_files/
+PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
 INTRO_GRAPHIC =         machinekit.gif
@@ -187,10 +188,10 @@ TOOL_TABLE =            mill.tbl
 # This gives a maxvel of 20000/2000 = 10 ips
 #
 TYPE =              LINEAR
-MAX_VELOCITY =       2.0
+MAX_VELOCITY =       1.0
 MAX_ACCELERATION =   15.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    2.6
+STEPGEN_MAX_VEL =    1.6
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
@@ -204,7 +205,7 @@ MIN_FERROR =          0.05
 
 HOME                =   0.000
 HOME_OFFSET         =  -0.1
-HOME_SEARCH_VEL     =  -1.5
+HOME_SEARCH_VEL     =  -0.5
 HOME_LATCH_VEL      =   0.25
 HOME_USE_INDEX      =    NO
 HOME_IGNORE_LIMITS  =    YES
@@ -243,10 +244,10 @@ MAX_OUTPUT  =            0
 # This gives a maxvel of 20000/2000 = 10 ips
 #
 TYPE =              LINEAR
-MAX_VELOCITY =       2.0
+MAX_VELOCITY =       1.0
 MAX_ACCELERATION =   15.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    2.6
+STEPGEN_MAX_VEL =    1.6
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
@@ -254,14 +255,14 @@ BACKLASH =           0.000
 SCALE =              2000
 
 MIN_LIMIT =          -0.0
-MAX_LIMIT =          12.0
+MAX_LIMIT =           9.0
 
 FERROR =               .1
 MIN_FERROR =          0.05
 
 HOME                =  0.000
 HOME_OFFSET         = -0.1
-HOME_SEARCH_VEL     = -1.5
+HOME_SEARCH_VEL     = -0.5
 HOME_LATCH_VEL      =  0.250
 HOME_USE_INDEX     =   NO
 HOME_IGNORE_LIMITS  =  YES
@@ -355,7 +356,7 @@ MAX_OUTPUT  =            0
 # This gives a maxvel of 12.5/1 = 12.5 ips
 #
 TYPE =              ANGULAR
-MAX_VELOCITY =       1.0
+MAX_VELOCITY =       0.5
 MAX_ACCELERATION =   15.0
 # Set Stepgen max 20% higher than the axis
 STEPGEN_MAX_VEL =    1.2
@@ -366,7 +367,7 @@ BACKLASH =           0.000
 SCALE =  2000
 
 MIN_LIMIT =             -0.0
-MAX_LIMIT =             15.0
+MAX_LIMIT =              9.0
 
 FERROR =     .1
 MIN_FERROR = 0.05
