Trying to merge configs into master

--- a/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
@@ -38,7 +38,7 @@ DISPLAY = axis
 #EDITOR = mousepad
 
 # Cycle time, in seconds, that display will sleep between polls
-CYCLE_TIME =            0.200
+CYCLE_TIME =            0.0500
 
 # Path to help file
 HELP_FILE =             tklinucnc.txt
@@ -198,7 +198,7 @@ BACKLASH =           0.000
 SCALE =              2000
 
 MIN_LIMIT =          -0.0
-MAX_LIMIT =          13.0
+MAX_LIMIT =           9.125
 
 FERROR =               .1
 MIN_FERROR =          0.05
@@ -254,8 +254,8 @@ BACKLASH =           0.000
 # scale is 200 steps/rev * 2 microstep * 5 tpi = 2000 steps/inch
 SCALE =              2000
 
-MIN_LIMIT =          -0.0
-MAX_LIMIT =           9.0
+MIN_LIMIT =           0.0
+MAX_LIMIT =           5.5
 
 FERROR =               .1
 MIN_FERROR =          0.05
@@ -312,7 +312,7 @@ BACKLASH =           0.000
 SCALE =              8000
 
 MIN_LIMIT =           0.0
-MAX_LIMIT =           5.0
+MAX_LIMIT =          10.5
 
 FERROR =     .1
 MIN_FERROR = 0.05
@@ -366,11 +366,11 @@ BACKLASH =           0.000
 # SCALE is 200 steps/rev * 2 microstep * 5 revs/inch = 2000 steps/inch
 SCALE =  2000
 
-MIN_LIMIT =             -0.0
-MAX_LIMIT =              9.0
+MIN_LIMIT       =      -9999.0
+MAX_LIMIT       =  999999999.0
 
-FERROR =     .1
-MIN_FERROR = 0.05
+FERROR          =  .1
+MIN_FERROR      = 0.05
 
 HOME =                  0.000
 HOME_OFFSET =           0.00
