--- a/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ShuttleXpress.ini
+++ b/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ShuttleXpress.ini
@@ -1,29 +1,31 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
-CONFIG=pru=1 num_stepgens=4 num_pwmgens=6
+CONFIG=prucode=/usr/lib/linuxcnc/rt-preempt/pru_generic.bin pru=0 num_stepgens=4 num_pwmgens=6
 #PRUBIN=xenomai/pru_generic.bin
 PRUBIN=rt-preempt/pru_generic.bin
 
-
+###############################################################################
+# Hardware Abstraction Layer section
+###############################################################################
 [EMC]
 
 # Name of machine, for use with display, etc.
 MACHINE =               MendelMax-CRAMPS
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
+DEBUG = 0
 #DEBUG =                0x00000003
 #DEBUG =                0x00000007
-DEBUG = 0
 
 
-
-
+###############################################################################
+# Sections for display options 
+###############################################################################
 [DISPLAY]
-
 # Name of display program, e.g., tkemc
+DISPLAY = axis
 #DISPLAY = tkemc
 #DISPLAY = gscreen
-DISPLAY = axis
 
 # Touchy currently won't work without some hardware buttons/jog-wheel
 #DISPLAY = touchy
@@ -44,9 +46,9 @@ POSITION_FEEDBACK =     ACTUAL
 MAX_FEED_OVERRIDE =     1.5
 
 # Prefix to be used
-PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
 #PROGRAM_PREFIX = ../../../nc_files/
-#PROGRAM_PREFIX = ~/machinekit/nc_files/
+#PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files/
+PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
 INTRO_GRAPHIC =         machinekit.gif
@@ -68,6 +70,9 @@ jpg = image-to-gcode
 py = python
 
 
+###############################################################################
+# Task controller section 
+###############################################################################
 [TASK]
 
 # Name of task controller program, e.g., milltask
@@ -77,16 +82,16 @@ TASK =                  milltask
 CYCLE_TIME =            0.010
 
 
-
-
+###############################################################################
+# Part program interpreter section 
+###############################################################################
 [RS274NGC]
-
 # File containing interpreter variables
 PARAMETER_FILE =        pru-stepper.var
 
-
-
-
+###############################################################################
+# Motion control section 
+###############################################################################
 [EMCMOT]
 
 EMCMOT =                motmod
@@ -101,8 +106,9 @@ COMM_WAIT =             0.010
 SERVO_PERIOD =          1000000
 
 
-
-
+###############################################################################
+# Hardware Abstraction Layer section
+###############################################################################
 [HAL]
 
 # The run script first uses halcmd to execute any HALFILE
@@ -111,7 +117,7 @@ SERVO_PERIOD =          1000000
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
 
-HALFILE =		CRAMPS.hal
+HALFILE =               CRAMPS.hal
 HALFILE =               ../../../common/shuttlexpress.hal
 
 # list of halcmd commands to execute
@@ -124,6 +130,9 @@ POSTGUI_HALFILE =       3D.postgui.hal
 POSTGUI_HALFILE =       ShuttleXpress.postgui.hal
 
 
+###############################################################################
+# Trajectory planner section
+###############################################################################
 [TRAJ]
 
 AXES =                  4
@@ -140,6 +149,9 @@ MAX_LINEAR_VELOCITY = 200.00
 
 
 
+###############################################################################
+# Axes sections
+###############################################################################
 [AXIS_0]
 
 # 
@@ -197,6 +209,7 @@ STEP_INVERT =           0
 
 
 
+################################################################
 [AXIS_1]
 
 TYPE =              LINEAR
@@ -240,6 +253,7 @@ STEP_INVERT =           0
 
 
 
+################################################################
 [AXIS_2]
 
 TYPE =              LINEAR
@@ -284,6 +298,7 @@ STEP_INVERT =           0
 
 
 
+################################################################
 [AXIS_3]
 
 TYPE = ANGULAR
