Created separate .ini and .hal for 4 Axis, modified Xylotex.ini and Xylotex.hal for 3 axis.

--- a/configs/ARM/BeagleBone/Xylotex/Xylotex4Axis.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex4Axis.ini
@@ -3,7 +3,7 @@ DRIVER=hal_pru_generic
 #PRUCODE=/usr/lib/linuxcnc/rt-preempt/pru_generic.bin pru=1 pru_period=25000 halname=hpg num_stepgens=4 num_pwmgens=1
 #PRUBIN=xenomai/pru_generic.bin
 PRUBIN=rt-preempt/pru_generic.bin
-CONFIG=pru=1 halname=hpg num_stepgens=3
+CONFIG=pru=1 pru_period=25000 halname=hpg num_stepgens=4 num_pwmgens=1
 
 ###############################################################################
 # General section 
@@ -141,9 +141,9 @@ MDI_COMMAND = G92 x2 y-.5
 # Trajectory planner section
 ###############################################################################
 [TRAJ]
-AXES =                     3
-COORDINATES =              X Y Z
-HOME =                     1 1 0
+AXES =                     4
+COORDINATES =              X Y Z A
+HOME =                     1 1 0 2
 MAX_ANGULAR_VELOCITY =     45.00
 DEFAULT_ANGULAR_VELOCITY = 4.50
 LINEAR_UNITS =             inch
@@ -197,7 +197,7 @@ STEPGEN_MAX_ACC =    18.75
 BACKLASH =           0.000
 SCALE =              2000
 
-MIN_LIMIT =          -0.1
+MIN_LIMIT =          -0.0
 MAX_LIMIT =           9.125
 
 FERROR =               .1
@@ -205,8 +205,8 @@ MIN_FERROR =          0.05
 
 HOME                =   0.000
 HOME_OFFSET         =  -0.1
-HOME_SEARCH_VEL     =  -0.50
-HOME_LATCH_VEL      =   0.10
+HOME_SEARCH_VEL     =  -0.5
+HOME_LATCH_VEL      =   0.25
 HOME_USE_INDEX      =    NO
 HOME_IGNORE_LIMITS  =    YES
 HOME_IS_SHARED      =    1
@@ -254,7 +254,7 @@ BACKLASH =           0.000
 # scale is 200 steps/rev * 2 microstep * 5 tpi = 2000 steps/inch
 SCALE =              2000
 
-MIN_LIMIT =          -0.10
+MIN_LIMIT =           0.0
 MAX_LIMIT =           5.5
 
 FERROR =               .1
@@ -263,7 +263,7 @@ MIN_FERROR =          0.05
 HOME                =  0.000
 HOME_OFFSET         = -0.1
 HOME_SEARCH_VEL     = -0.5
-HOME_LATCH_VEL      =  0.10
+HOME_LATCH_VEL      =  0.250
 HOME_USE_INDEX     =   NO
 HOME_IGNORE_LIMITS  =  YES
 HOME_IS_SHARED      =  1
@@ -317,14 +317,69 @@ MAX_LIMIT =          10.5
 FERROR =     .1
 MIN_FERROR = 0.05
 
-HOME                =   10.4
-HOME_OFFSET         =   10.5
+HOME                =   0.000
+HOME_OFFSET         =   0.00
 HOME_SEARCH_VEL     =   1.0
-HOME_LATCH_VEL      =  -0.10
+HOME_LATCH_VEL      =  -0.250
 HOME_USE_INDEX      =   NO
 HOME_IGNORE_LIMITS  =   YES
 HOME_IS_SHARED      =   1
 HOME_SEQUENCE       =   0
+
+# these are in nanoseconds
+DIRSETUP    =            25000
+DIRHOLD     =            25000
+STEPLEN     =            25000
+STEPSPACE   =            25000
+
+# Set to one for active low step pulses
+STEP_INVERT =            0
+
+# PID tuning params
+DEADBAND    =            0
+P           =            50
+I           =            0
+D           =            0
+FF0         =            0
+FF1         =            1
+FF2         =            0
+BIAS        =            0
+MAX_OUTPUT  =            0
+
+################################################################
+[AXIS_3]
+
+#
+# Step timing is 25 us steplen + 25 us stepspace
+# That gives 50 us step period = 20 KHz step freq
+#
+# This gives a maxvel of 12.5/1 = 12.5 ips
+#
+TYPE =              ANGULAR
+MAX_VELOCITY =       0.5
+MAX_ACCELERATION =   15.0
+# Set Stepgen max 20% higher than the axis
+STEPGEN_MAX_VEL =    1.2
+STEPGEN_MAX_ACC =    18.75
+
+BACKLASH =           0.000
+# SCALE is 200 steps/rev * 2 microstep * 5 revs/inch = 2000 steps/inch
+SCALE =  2000
+
+MIN_LIMIT       =      -9999.0
+MAX_LIMIT       =  999999999.0
+
+FERROR          =  .1
+MIN_FERROR      = 0.05
+
+HOME =                  0.000
+HOME_OFFSET =           0.00
+HOME_SEARCH_VEL =       -.1
+HOME_LATCH_VEL =        0.2
+#HOME_USE_INDEX =        YES
+#HOME_IGNORE_LIMITS =    YES
+#HOME_IS_SHARED =        1
+#HOME_SEQUENCE =         2
 
 # these are in nanoseconds
 DIRSETUP    =            25000
